--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
 <body>
     <div class="search-wrapper">
         <label for="search">Crafting Suchen</label>
-        <input type="search" id="search" data-search>
+        <input type="search" id="search" data-search>#
+    </div>
+    <div>
+        <select onchange="update()" id="filter">
+            <option value="0">alle mods</option>
+            <option value="1">mod1</option>
+            <option value="2">mod2</option>
+            <option value="3">mod3</option>
+        </select>
     </div>
     <div class="item-cards" data-item-container></div>
     <template data-item-template >
             <div class="card">
                 <div class="header" data-header></div>
                 <div class="body" data-body></div>
-                <div class="pic" > <img src="pic" alt="" data-pic></div>
+                <div class="mod" data-mod></div>
             </div>
     </template>
 </body>
