--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <label for="search">Crafting Suchen</label>
         <input type="search" id="search" placeholder="Suche" data-search>
     </div>
-    <div>
+<!--     <div>
         <select onchange="update()" id="filter">
             <option value="0">Alle Mods</option>
             <option value="1">Backpack</option>
@@ -25,14 +25,14 @@
             <option value="7">MineChess</option>
             <option value="8">PlantMegaMod</option>
         </select>
-    </div>
+    </div> -->
     <div class="item-cards" data-item-container></div>
     <template data-item-template >
             <div class="card">
                 <div class="header" data-header></div>
                 <div class="body" data-body></div>
                 <div class="mod" data-mod></div>
-                <div class="pic" data-pic> <img id="rezept"></div>
+                <div class="img"><img id="crafting"></div>
             </div>
     </template>
 </body>
