--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <script src="script.js" defer></script>
+    <script type="text/javascript" src="script.js" defer></script>
     <title>Testfile</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
                 <div class="header" data-header></div>
                 <div class="body" data-body></div>
                 <div class="mod" data-mod></div>
-                <div class="img"><img id="crafting"></div>
+                <div class="img"><img data-src width="50" height="50"></div>
             </div>
     </template>
 </body>
