--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <label for="search">Crafting Suchen</label>
         <input type="search" id="search" placeholder="Suche" data-search>
     </div>
-<!--     <div>
+    <div>
         <select onchange="update()" id="filter">
-            <option value="0">Alle Mods</option>
-            <option value="1">Backpack</option>
-            <option value="2">Chisel</option>
-            <option value="3">CustomNPC</option>
-            <option value="4">Decocraft</option>
-            <option value="5">Floocraft</option>
-            <option value="6">HPU-DAEdition</option>
-            <option value="7">MineChess</option>
-            <option value="8">PlantMegaMod</option>
+            <option value="all">Alle Mods</option>
+            <option value="bp">Backpack</option>
+            <option value="ch">Chisel</option>
+            <option value="cnpc">CustomNPC</option>
+            <option value="dc">Decocraft</option>
+            <option value="fc">Floocraft</option>
+            <option value="hpu">HPU-DAEdition</option>
+            <option value="mc">MineChess</option>
+            <option value="pm">PlantMegaMod</option>
         </select>
-    </div> -->
+    </div>
     <div class="item-cards" data-item-container></div>
     <template data-item-template >
             <div class="card">
