--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="header" data-header></div> <!-- Item Title -->
                 <div class="body" data-body></div> <!-- Englischer Name -->
                 <div class="mod" data-mod></div> <!-- zu welcher Mod das Item gehört -->
-                <div class="img"><img data-img width="50" height="50"></div> <!-- Retzept -->
+                <div class="img"><img data-img width="50" height="50"></div> <!-- Retzept bild -->
             </div>
     </template>
 </body>
