--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="search.css"> <!-- Stylesheet Searchengine -->
+    <link rel="stylesheet" type="text/css" href="node_modules/lightbox2/src/css/lightbox.css">
     <script type="text/javascript" src="search.js" defer></script> <!-- Searchengine Code -->
+    <script rel"stylesheet" type="text/javascript" href="node_modules/lightbox2/dist/js/lightbox-plus-jquery.js"></script>
     <title>Testfile</title>
 </head>
 <body>
@@ -36,7 +38,7 @@
                 <div class="header" data-header></div> <!-- Item Title -->
                 <div class="body" data-body></div> <!-- Englischer Name -->
                 <div class="mod" data-mod></div> <!-- zu welcher Mod das Item gehört -->
-                <div class="img"><img data-src width="50" height="50"></div> <!-- Retzept bild -->
+                <div class="img"><a data-link><img data-src width="50" height="50"></a></div> <!-- Retzept bild -->
             </div>
     </template>
 </body>
