--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     
     <div><!-- Filter Dropdown -->
-        <label for="filter"></label><select id="filter" onchange="update()"> <!-- //(Floh) added <label> so IntelliJ doesn't annoy me -->
+        <label for="filter"></label><select id="filter" onchange="update()"> 
             <option value="all">Alle Mods</option>
         </select>
     </div>
@@ -28,7 +28,7 @@
                 <div class="header" data-header></div> <!-- Item Title -->
                 <div class="body" data-body></div> <!-- English Name -->
                 <div class="mod" data-mod></div> <!-- A placeholder for the mod name. -->
-                <div class="img"><a data-link><img data-src width="50" height="50" alt="" src=""></a></div> <!-- Recipe Image --> <!-- //(Floh) Added missing Attributes (alt, src) so IntelliJ shuts up -->
+                <div class="img"><a data-link><img data-src width="50" height="50" alt="" src=""></a></div> <!-- Recipe Image -->
             </div>
     </template>
 </body>
