--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="search.css"> <!-- Stylesheet SearchEngine -->
     <script type="text/javascript" src="search.js" defer></script> <!-- SearchEngine Code -->
-    <title>Testfile</title>
+    <script src="https://kit.fontawesome.com/61ad8a7123.js" crossorigin="anonymous"></script>
+    <title>mtkp / NEI SearchEngine</title>
 </head>
 <body>
+    <div class="description">
+        <p>Diese Suchfunktion ist im Auftrag von <a href="https://mtk-project.de">MTKP</a> für den <a href="https://nei.dagilp.de">LBAH-NEI Ersatz</a> entstanden</p>
+        <p><a href="https://github.com/MatitoDA/Search_for_Maris"><i class="fab fa-github"></i> Hier gehts zur GitHub Repo</a></p>
+    </div>
     <div class="search-wrapper"><!-- Searchbar -->
         <label for="search">Crafting Suchen</label>
         <input type="search" id="search" placeholder="Suche" data-search>
@@ -28,7 +33,7 @@
                     <div class="innerCard"><!-- Box with Item infos -->
                         <div class="header" data-header></div> <!-- Item Title -->
                         <div class="body" data-body></div> <!-- English Name -->
-                        <div class="mod" data-mod></div> <!-- A placeholder for the mod name. -->
+                        <div class="mod" data-mod></div> <!-- Mod name. -->
                         <div class="img"><img data-src width="50" height="50" alt="" src=""></div> <!-- Recipe Image -->
                     </div>
                 </a>
